--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
     <h5>Aspiring Jr. Web Developer</h5>
     <p></p>
     <h6></h6>
-    <img src="C:\Users\t_tha\OneDrive\Pictures\Camera Roll\pfps\IMG_3965 resize2.JPG" class="img-circle" alt="me" width="175" height="175">
+    <img src="/assets/images/img_3965_resize2.jpg" class="img-circle" alt="me" width="175" height="175">
     <p>Hello, I'm Tedd! I'm an aspiring Jr. Web Developer. I took in interest in creating websites and here I am! I'm learning new skills everyday. 
         I will be an asset to my projects and for [the company] that takes me on being well versed in coding. I hope to learn all there is to coding and programming to be able to tackle any probelm. 
         I'm Mildly experienced. I have a strong passion for creating amazing websites and solving probelms. My portfolio contains projects that I've worked on. (updated frequently) </p>
