--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
     <h5>Aspiring Jr. Web Developer</h5>
     <p></p>
     <h6></h6>
-    <img src="./assets/images/img_3965_resize2.jpg" class="img-circle" alt="me" width="175" height="175">
+    <img src="../assets/images/img_3965_resize2.jpg" class="img-circle" alt="me" width="175" height="175">
     <p>Hello, I'm Tedd! I'm an aspiring Jr. Web Developer. I took in interest in creating websites and here I am! I'm learning new skills everyday. 
         I will be an asset to my projects and for [the company] that takes me on being well versed in coding. I hope to learn all there is to coding and programming to be able to tackle any probelm. 
         I'm Mildly experienced. I have a strong passion for creating amazing websites and solving probelms. My portfolio contains projects that I've worked on. (updated frequently) </p>
@@ -65,15 +65,15 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
         <p class="text-left text-lg-center"></p>
       </div>
     </div>
+ <hr class="my-9">
     <div class="row">
-      <div class="col-md-6 mb-5 mb-md-0">
+      <div class="col-md-6 mb-5 mb-md-0 ">
         <h5 class="mb-4">Education</h5>
         <p class="h6 mb-0">BA Operations & Management</p>
         <p class="text-gray-800">Southwestern Adventist University, 2021 - 2026</p>
         <p class="h6 mb-0"> JWD </p>
         <p class="text-gray-800">Generation, 2022 - 2023</p>
       </div>
-
       <div class="col-md-6">
         <h5 class="mb-4">Program Languages</h5>
         <p class="h6 mb-0">HTML</p>
@@ -81,7 +81,6 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
         <p class="h6 mb-0">Javascript</p>
       </div>
     </div>
-
     <hr class="my-9">
 
     <div class="row mb-8">
