--- a/index.html
+++ b/index.html
@@ -103,11 +103,10 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
         <div class="col-md-4 mt-3">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Project 1</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h4 class="card-title">Task List (Collaboration Project)</h4>
+                    <p class="card-text"> This is a collorbation project in which my teammates and I created a task list website. I worked on this project within the Generation Program. 
+                        This project contains HTML, CSS, Bootstrap, and Javascript. (Have yet to add Javascript). The teammates, <a href="https://github.com/Amele-A">Amele</a> and 
+                        <a href="https://github.com/ErrolProxy">Errol</a> are great developers would helped this project come to life.  </p>
                     <div class="text-center">
                         <a href="https://ttrgear.github.io/Task-List-Final-Project-Collaboration-/" class="btn btn-dark">Task-List</a>
                     </div>
@@ -117,13 +116,11 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
         <div class="col-md-4 mt-3">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Project 2</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h4 class="card-title">Quiz App</h4>
+                    <p class="card-text"> This is a quiz app project. This project contains HTML, CSS, and Javascript. 
+                        There is a mix of coding questions and funny questions within this quiz app. </p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-dark">Project 2</a>
+                            <a href="#" class="btn btn-dark">Quiz App</a>
                         </div>
                 </div>
             </div>
@@ -131,13 +128,11 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
         <div class="col-md-4 mt-3">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title">Project 3</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h4 class="card-title">Password Generator</h4>
+                    <p class="card-text"> This is a work in progress project. This is a password generator. This project contains HTML, CSS, and heavy Javascript. Once this project is finished it will generate a password. 
+                        That password will be between 8-128 chracters, be either lowercase or uppercase, and have numeric or special characters. </p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-dark">Project 3</a>
+                            <a href="#" class="btn btn-dark">PW Generator</a>
                         </div>
                 </div>
             </div>
