--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
         I will be an asset to my projects and for [the company] that takes me on being well versed in coding. I hope to learn all there is to coding and programming to be able to tackle any probelm. 
         I'm Mildly experienced. I have a strong passion for creating amazing websites and solving probelms. My portfolio contains projects that I've worked on. (updated frequently) </p>
      <h6>Link to My Online Resume:</h6>
-     <a href="" class="btn btn-dark">Resume </a>
+     <a href="https://ttrgear.github.io/ttrgear.github.io-resume/" class="btn btn-dark">Resume </a>
  </div>
 
   </div>
@@ -120,7 +120,7 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
                     <p class="card-text"> This is a quiz app project. This project contains HTML, CSS, and Javascript. 
                         There is a mix of coding questions and funny questions within this quiz app. </p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-dark">Quiz App</a>
+                            <a href="https://ttrgear.github.io/Quiz-App-/" class="btn btn-dark">Quiz App</a>
                         </div>
                 </div>
             </div>
@@ -130,9 +130,9 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
                 <div class="card-body">
                     <h4 class="card-title">Password Generator</h4>
                     <p class="card-text"> This is a work in progress project. This is a password generator. This project contains HTML, CSS, and heavy Javascript. Once this project is finished it will generate a password. 
-                        That password will be between 8-128 chracters, be either lowercase or uppercase, and have numeric or special characters. </p>
+                        That password will be between 8-128 chracters, be either lowercase or uppercase, and have numeric or special characters. (work on a workig branch) </p>
                         <div class="text-center">
-                            <a href="#" class="btn btn-dark">PW Generator</a>
+                            <a href="https://github.com/ttrgear/password-generator-learner-copy" class="btn btn-dark">PW Generator</a>
                         </div>
                 </div>
             </div>
