--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
                 <h2 class="hero_title">Tedd Tharpe</h2>
-                <p class="hero_desc">Jr. Web Developer Portfolio</p>
+                <p class="hero_desc"><strong>Jr. Web Developer Portfolio</strong></p>
             </div>
         </div>
     </div>
