--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
                     <p class="card-text"> This is a work in progress project. This is a password generator. This project contains HTML, CSS, and heavy Javascript. Once this project is finished it will generate a password. 
                         That password will be between 8-128 chracters, be either lowercase or uppercase, and have numeric or special characters. (work on a workig branch) </p>
                         <div class="text-center">
-                            <a href="https://github.com/ttrgear/password-generator-learner-copy" class="btn btn-dark">PW Generator</a>
+                            <a href="#" class="btn btn-dark">PW Generator</a>
                         </div>
                 </div>
             </div>
