--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
                 <div class="card-body">
                     <h4 class="card-title">Task List (Collaboration Project)</h4>
                     <p class="card-text"> This is a collorbation project in which my teammates and I created a task list website. I worked on this project within the Generation Program. 
-                        This project contains HTML, CSS, Bootstrap, and Javascript. (Have yet to add Javascript). The teammates, <a href="https://github.com/Amele-A">Amele</a> and 
-                        <a href="https://github.com/ErrolProxy">Errol</a> are great developers would helped this project come to life.  </p>
+                        This project contains HTML, CSS, Bootstrap, and Javascript. (Have yet to add Javascript). The teammates are great developers that helped this project come to life.  </p>
                     <div class="text-center">
                         <a href="https://ttrgear.github.io/Task-List-Final-Project-Collaboration-/" class="btn btn-dark">Task-List</a>
                     </div>
