--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
 
 <footer class="container-fluid bg-2 text-center" >
     <section id="contact">
-    <p>Email: <a href="#">t_tharpe@aol.com</a> </p>
+    <p>Email: <a href="https://mail.aol.com/webmail-std/en-us/ComposeMessage?ws_popup=true&ws_suite=true">t_tharpe@aol.com</a> </p>
     <p>GitHub: <a href="https://github.com/ttrgear">github/ttrgear</a> </p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/tedd-tharpe-44a47b24b/">linkedin/tedd-tharpe</a> </p>
 
