--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@ rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxj
     <div class="row mb-8">
       <div class="col-lg-10 mx-auto">
         <h2 class="text-center mb-4">Skills</h2>
-        <p class="text-left text-lg-center">Adaptable, Quick Learner, Very Responsible, Business principles, Microsoft Office (Docs,Slides,Sheets),
-        Persistent, Proactiveness, Strong Computer Literacy, Laid Back, Team Player, Attention to detail, Strong probelm-solving skills, Communications, Creative Ability.
+        <p class="text-left text-lg-center">Adaptable, Git, Bootstrap, Microsoft Office (Docs,Slides,Sheets), Persistent, Proactiveness, Strong Computer Literacy, Attention to detail, Strong probelm-solving skills, Communications, Creative Ability.
         </p>
       </div>
 
